# mockio-cmds-rsync

./: .gitignore  changelog.md  dependencies.nix  mockio-cmds-rsync.cabal
proto/MockIO/Cmds/RSync/: Paths.hs
src/MockIO/Cmds/RSync/: RSync.hs  RSyncOpt.hs  RSyncUsageError.hs  ToRSyncArgs.hs
