name:                mockio-cmds-rsync

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             1.0.0.0
synopsis:            MockIO wrappers for rsync
description:         MockIO wrappers for rsync
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    MockIO.Cmds.RSync.Paths
                    , MockIO.Cmds.RSync.RSync
                    , MockIO.Cmds.RSync.RSyncOpt
                    , MockIO.Cmds.RSync.RSyncUsageError
                    , MockIO.Cmds.RSync.ToRSyncArgs
  other-modules:
  default-extensions: DeriveAnyClass
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , LambdaCase
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , QuasiQuotes
                    , RankNTypes
                    , TemplateHaskell
                    , TypeApplications
                    , UnicodeSyntax
                    , ViewPatterns

  build-depends:      base, containers, deepseq, lens, logging-effect, mtl, safe
                    , text-printer

                    , base1t       >= 0.0.5.0
                    , fpath        >= 1.3.2.0
                    , log-plus     >= 0.0.4.4
                    , mockio       >= 0.0.4.4
                    , mockio-log   >= 0.1.2.0
                    , mockio-plus  >= 0.3.12.0
                    , monadio-plus >= 2.4.3.0
                    , stdmain      >= 1.5.13.0

  hs-source-dirs:      src
  default-language:    Haskell2010

-------------------------------------------------------------------------------
